<resources>
    <string name="app_name">Escalero\nDice Poker</string>
    <string name="prefTitle">Settings</string>
    <string name="statusBar">Status Bar</string>
    <string name="appClose">Really close?</string>
    <string name="appCancel">cancel</string>
    <string name="appExit">Exit</string>
    <string name="player">Player:</string>
    <string name="gameType">Game type</string>
    <string name="typeSingle">Single</string>
    <string name="typeDouble">Double</string>
    <string name="menu">Escalero - Menu</string>
    <string name="menuInfo">Escalero - v%1$s (%2$d)</string>
    <string name="game">Game</string>
    <string name="newGame">New game</string>
    <string name="gameOver">Game over!</string>
    <string name="info">Information</string>
    <string name="pointsColumn">points col.</string>
    <string name="payoutMultiplier">payout multiplier</string>
    <string name="bonusServed">bonus served</string>
    <string name="bonusServedGrande">bonus served Grande</string>
    <string name="accounting">Accounting</string>
    <string name="columns">col.</string>
    <string name="summation">summation</string>
    <string name="sounds">sounds</string>
    <string name="unit">unit</string>
    <string name="diceManual">result entry</string>
    <string name="diceAutomatic">dice</string>
    <string name="diceIcons">Dices</string>
    <string name="simple">simple</string>
    <string name="classic">classic</string>
    <string name="file">file</string>
    <string name="val_9">9</string>
    <string name="val_10">10</string>
    <string name="val_j">J</string>
    <string name="val_q">Q</string>
    <string name="val_k">K</string>
    <string name="val_a">A</string>
    <string name="val_s">S</string>
    <string name="val_f">F</string>
    <string name="val_p">P</string>
    <string name="val_g">G</string>
    <string name="dice">dice</string>
    <string name="diceTry">try</string>
    <string name="diceEnterResult">enter result!</string>
    <string name="diceRunt">runt</string>
    <string name="dicePair">a pair</string>
    <string name="diceTwoPair">two pair</string>
    <string name="diceThreeOfKind">three of kind</string>
    <string name="diceStraight">straight</string>
    <string name="diceFullHouse">full house</string>
    <string name="dicePoker">poker</string>
    <string name="diceGrande">grande</string>
    <string name="diceServed">served</string>
    <string name="playerStart">Who starts?</string>
    <string name="automatic">Automatic</string>
    <string name="infoGame">User manual</string>
    <string name="infoWiki">Escalero - WIKI</string>
    <string name="infoDevice">Device information</string>
    <string name="infoContact">Contact</string>
    <string name="infoHomepage">Homepage</string>
    <string name="sendEmail">Send email</string>
    <string name="team">%1$d teams</string>
    <string name="enterResults">enter results!</string>
    <string name="points">Points</string>
    <string name="flipScreen">flip screen</string>
    <string name="pressCenterButton">press the right button(bottom)</string>
    <string name="nextPlayer">next playerId:</string>
    <string name="displayColumns">display by columns</string>
    <string name="displayPlayers">display by players</string>
    <string name="flipEnabled">flip mode enabled!</string>
    <string name="flipDisabled">flip mode disabled!</string>
    <string name="accountingSummation">accounting with summation</string>
    <string name="accountingDifference">accounting with difference calculation</string>
    <string name="accounting3Player">With 3 players/teams, only accounting with summation!</string>
    <string name="flip3Players">With 3 players/teams, no flip mode!</string>
    <string name="checkEntry">check entry!</string>
    <string name="noEntry">No entry available!</string>
    <string name="isDicing">dicing, please wait!</string>
    <string name="advertising">Advertising ( EP! )</string>
    <string name="prefsVariants">Game Variants</string>
    <string name="prefsDice">Dice-Options</string>
    <string name="prefsAcounting">Acounting</string>
    <string name="prefsOther">Miscellaneous</string>
    <string name="infoWhatsNew">What\'s new?</string>
    <string name="prefsEngines">Computer play</string>
    <string name="enginePlayer">computer (on/off)</string>
    <string name="logging">logging</string>
    <string name="isStopped">Engine stopped, please wait!</string>
    <string name="appUserManuel">User manual</string>
    <string name="appContinue">Continue</string>
    <string name="appLabel">Escalero</string>
    <string name="infoAds">Information - Advertising</string>
    <string name="yourName">Me</string>
    <string name="resultTable">select table</string>
    <string name="resultValue">enter the value</string>
    <string name="fileLoad">Load a game</string>
    <string name="fileSave">Save a game</string>
    <string name="noResults">No results!</string>
    <string name="maxGames">"Maximum number of games reached: "</string>
    <string name="fileWait">loading games, please wait!</string>
    <string name="dialogYes">yes</string>
    <string name="dialogNo">no</string>
    <string name="dialogLater">later</string>
    <string name="flipEngines">Engine players, no flip mode!</string>
    <string name="developer">Developer/License</string>
    <string name="dimension2D">2D</string>
    <string name="dimension3D">dice board</string>
    <string name="escalero">Escalero</string>
    <string name="diceSizeSmall">small</string>
    <string name="diceSizeMedium">medium</string>
    <string name="diceSizeLarge">large</string>
    <string name="tryChessForAll">try Chess for All</string>
    <string name="app_installation">App installation.\n\nPlease wait.</string>
    <string name="playOnline">Play Online</string>
    <string name="logIn">Log in</string>
    <string name="logOut">Log out</string>
    <string name="inviteFriends">Start match</string>
	<string name="quickMatch">Quick match</string>
    <string name="notLoggedIn">not logged in</string>
    <string name="statusExceptionError">Status, ExceptionError</string>
    <string name="status_multiplayer_error_not_trusted_tester">not trusted tester</string>
    <string name="match_error_already_rematched">already rematched</string>
    <string name="network_error_operation_failed">network error, operation failed</string>
    <string name="internal_error">internal error</string>
    <string name="match_error_inactive_match">inactive match</string>
    <string name="match_error_locally_modified">Server error during data communication\nInternet problem?</string>
    <string name="unexpected_status">unexpected status</string>
    <string name="signin_other_error">signin, unknown error</string>
    <string name="error_get_select_opponents">There was a problem with inviting friends!</string>
    <string name="invitationNewGame">Invitation to a new game\n%1$s</string>
    <string name="accept">accept</string>
    <string name="reject">reject</string>
    <string name="confirmEntry">Confirm entry</string>
    <string name="yourTurn">It is your turn!</string>
    <string name="waitingFor">Please wait!</string>
    <string name="waitForOk">Wait for OK</string>
    <string name="dataUpdate">Data synchronization</string>
    <string name="dataUpdateProblem">Data update unsuccessful.</string>
    <string name="currentMatch">Current match</string>
    <string name="escaleroOnline">Escalero - Online</string>
    <string name="matchDelete">Delete</string>
    <string name="matchPause">Pause</string>
    <string name="matchUpdate">Update</string>
    <string name="notYourTurn">It is not your turn, please wait!</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="escaleroOffline">Escalero - Offline</string>
    <string name="time">before</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="second">second</string>
    <string name="matchPauseAndFinished">The match has finished.</string>
    <string name="checkGames">Check matches</string>
    <string name="ok">OK</string>
    <string name="expiredTitle">Expired</string>
    <string name="expired">This game is expired</string>
    <string name="waitingAutoTitle">Waiting for auto-match...</string>
    <string name="waitingAuto">We\'re still waiting for an automatch partner</string>
    <string name="invitationTitle">Invitation</string>
    <string name="invitation">Still waiting for an invitation. Be patient!</string>
    <string name="warningTitle">Warning</string>
    <string name="matchBreak">Match break!</string>
    <string name="noActiveMatch">No active match</string>
    <string name="unequalMatchId">Match ID unequal!</string>
    <string name="operationCanceled">Operation canceled</string>
    <string name="finishActiveMatch">First finish active match!\n\nEnd game anyway (pause):</string>
    <string name="timeBreak">(3 minutes)</string>
    <string name="rematchTitle">Rematch</string>
    <string name="rematch">Do you want a rematch?</string>
    <string name="matchDeleted">Match deleted!</string>
    <string name="activateAdvertising">Activate advertising again?</string>
    <string name="disabledOnline">Disabled in online mode</string>
    <string name="dataUpdateSuccessful">Data update successful!</string>
    <string name="developerMessage">Escalero is developed by Karl Schreiner and Lars Streblow\n\nLicense\nGNU GPLv3</string>
    <string name="multipleRegistered">Multiple registered!\n</string>
    <string name="result">Result</string>
    <string name="invitationRejected">Opponent rejected the match</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="match">%1$d match</string>
    <string name="matchStatusMy">%1$d Your turn</string>
    <string name="matchStatusTheir">%1$d Opponent\'s turn</string>
    <string name="matchStatusEnded">%1$d Match ended</string>
    <string name="justNow">Just now</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="nothingSelected">Nothing selected!</string>
    <string name="noMatches">There are no matches for this selection</string>
    <string name="noInternet">No internet connection?\nNo sign in?</string>
    <string name="matchStatusInvitation">%1$d Invitation(s)</string>
    <string name="wasInvited">was invited</string>
    <string name="campaign55_05">Campaign 55 - 05</string>
    <string name="campaignText">There are still a few players playing Escalero online. Therefore, try to play a game on the full hour (for example, 19:55 - 20:05). With the options \"Quick match\" (automatic) and \"Start match\" (manual) you increase the probability of finding an opponent.</string>
    <string name="invitationsDeleted">%1$d invitation(s) deleted</string>
    <string name="theirTurnPauseMatch">It is not your turn!\nStop the match anyway (pause):</string>
    <string name="continueMatch">The match can be continued later.</string>
    <string name="info55_05" translatable="false">55 - 05 ?</string>
    <string name="dismissMatch">Delete game\nDo you really want to delete this game?</string>
    <string name="lbBestId" translatable="false">CgkI5v7r1r0ZEAIQBQ</string>
    <string name="lbWorstId" translatable="false">CgkI5v7r1r0ZEAIQBg</string>
    <string name="unknownError">Unknown error</string>
    <string name="dataLoading">Data is loading . . . \nplease wait!</string>
    <string name="oftenActive">Often active</string>
    <string name="playerSearch">Player search</string>
    <string name="enterPlayerName">Enter a player name</string>
    <string name="playerNew">New player!</string>
</resources>