<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/activity_vertical_margin"
     android:layout_marginBottom="@dimen/activity_vertical_margin"
     android:background="@color/colorBlack">

        <ImageView
            android:id="@+id/escaleroIcon"
            android:src="@drawable/icon_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_horizontal_margin_4"
            android:layout_marginBottom="@dimen/margin_2"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />
        <ImageView
            android:id="@+id/gamesIcon"
            android:src="@drawable/icon_firebase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_horizontal_margin_4"
            android:layout_marginBottom="@dimen/margin_2"
            android:layout_marginEnd="@dimen/margin_2"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />
        <TextView
            android:id="@+id/matchTitle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/escaleroIcon"
            android:layout_toLeftOf="@+id/gamesIcon"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/colorDiceB"
            android:textSize="@dimen/text_size"
            android:text="@string/escaleroOnline" />

        <TextView
            android:id="@+id/logInName"
            style="@style/c4aTV4"
            android:layout_below="@id/escaleroIcon"
            android:background="@drawable/rectangleyellow"
            android:maxLines="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_2"
            android:layout_marginLeft="@dimen/view_horizontal_margin_4"
            android:layout_marginRight="@dimen/view_horizontal_margin_4"
            android:hint="@string/logIn"/>

        <LinearLayout
            android:id="@+id/action_1"
            android:layout_below="@id/logInName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginLeft="@dimen/view_horizontal_margin_4"
            android:layout_marginRight="@dimen/view_horizontal_margin_4"
            android:orientation="horizontal" >
                <TextView
                    android:id="@+id/escaleroPoints"
                    style="@style/c4aTV4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangleyellow"
                    android:maxLines="1"
                    android:text="" />
                <TextView
                    android:id="@+id/logOutBtn"
                    style="@style/c4aTV4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectanglegreen"
                    android:maxLines="1"
                    android:text="@string/logOut" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg_single_double"
            android:layout_below="@id/action_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/view_horizontal_margin_12"
            android:layout_marginRight="@dimen/view_horizontal_margin_12"
            android:layout_marginTop="@dimen/margin_2"
            android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_single"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/c4aRB2"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/typeSingle" />
                <RadioButton
                    android:id="@+id/rb_double"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/c4aRB2"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/typeDouble" />
        </RadioGroup>

        <TextView
            android:id="@+id/playerSearch"
            style="@style/c4aTV4"
            android:layout_below="@id/rg_single_double"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin"
            android:background="@drawable/rectangleyellow"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/view_horizontal_margin_30"
            android:layout_marginRight="@dimen/view_horizontal_margin_30"
            android:text="@string/playerSearch" />

        <TextView
            android:id="@+id/quickMatch"
            style="@style/c4aTV4"
            android:layout_below="@id/playerSearch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin"
            android:background="@drawable/rectangleyellow"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/view_horizontal_margin_30"
            android:layout_marginRight="@dimen/view_horizontal_margin_30"
            android:text="@string/quickMatch" />

        <TextView
            android:id="@+id/checkMatches"
            style="@style/c4aTV4"
            android:layout_below="@id/quickMatch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin"
            android:background="@drawable/rectangleyellow"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/view_horizontal_margin_30"
            android:layout_marginRight="@dimen/view_horizontal_margin_30"
            android:text="@string/checkGames" />

</RelativeLayout>