<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorBlack">

    <ImageView
        android:id="@+id/escaleroIcon"
        android:src="@drawable/icon_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_horizontal_margin_4"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />
    <ImageView
        android:id="@+id/gamesIcon"
        android:src="@drawable/icon_firebase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_horizontal_margin_4"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />
    <TextView
        android:id="@+id/playerNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_toRightOf="@+id/escaleroIcon"
        android:layout_toLeftOf="@+id/gamesIcon"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/colorDiceB"
        android:textSize="@dimen/text_size"
        android:text="@string/escaleroOnline" />

    <View
        android:id="@+id/sep0"
        android:layout_below="@id/escaleroIcon"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="@dimen/margin_1"
        android:layout_marginBottom="@dimen/button_margin"
        android:background="@color/colorHoldNewGame"/>

    <TextView
        android:id="@+id/playerNameAction"
        android:layout_below="@id/sep0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/view_horizontal_margin_4"
        android:gravity="left"
        android:textColor="@color/text_yellow"
        android:textSize="@dimen/text_size_20"
        android:text="@string/playerNew" />

    <EditText
        android:id="@+id/playerName"
        style="@style/c4aET1"
        android:layout_below="@id/playerNameAction"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/view_size_25"
        android:background="@drawable/rectangleyellow"
        android:maxLines="1"
        android:maxLength="20"
        android:inputType="text" android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_marginLeft="@dimen/view_horizontal_margin_4"
        android:layout_marginRight="@dimen/view_horizontal_margin_4"
        android:hint="@string/enterPlayerName"/>

    <TextView
        android:id="@+id/playerNameInfo"
        android:layout_below="@id/playerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/view_horizontal_margin_4"
        android:gravity="left"
        android:textColor="@color/text_yellow"
        android:textSize="@dimen/text_size_20"
        android:text="@string/info" />

    <LinearLayout
        android:id="@+id/bottomActions"
        android:layout_below="@id/playerNameInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/view_horizontal_margin_4"
        android:layout_marginRight="@dimen/view_horizontal_margin_4"
        android:weightSum="2"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/btnCancel"
            style="@style/c4aTV4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_horizontal_margin_30"
            android:background="@drawable/rectangleyellow"
            android:textSize="@dimen/text_size_16"
            android:layout_marginBottom="@dimen/view_vertical_margin"
            android:text="@string/appCancel" />
        <TextView
            android:id="@+id/btnAction"
            style="@style/c4aTV4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_horizontal_margin_30"
            android:background="@drawable/rectangleyellow"
            android:textSize="@dimen/text_size_16"
            android:layout_marginBottom="@dimen/view_vertical_margin"
            android:text="@string/back" />
    </LinearLayout>



</RelativeLayout>