<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginStart="@dimen/button_margin"
    android:layout_marginLeft="@dimen/button_margin"
    android:layout_marginEnd="@dimen/button_margin"
    android:layout_marginRight="@dimen/button_margin"
    android:background="@color/colorBlack">

    <ImageView
        android:id="@+id/escaleroIcon"
        android:src="@drawable/icon_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_horizontal_margin_4"
        android:layout_marginBottom="@dimen/view_horizontal_margin_4"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />
    <ImageView
        android:id="@+id/gamesIcon"
        android:src="@drawable/icon_firebase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_horizontal_margin_4"
        android:layout_marginBottom="@dimen/view_horizontal_margin_4"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />
    <TextView
        android:id="@+id/matchTitle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_toRightOf="@+id/escaleroIcon"
        android:layout_toLeftOf="@+id/gamesIcon"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/colorDiceB"
        android:textSize="@dimen/text_size"
        android:text="@string/escaleroOnline" />

    <TextView
        android:id="@+id/matchPlayers"
        android:layout_below="@id/escaleroIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_0"
        android:layout_marginBottom="@dimen/margin_0"
        android:textColor="@color/colorPlayerB"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:id="@+id/matchPlayerEps"
        android:layout_below="@id/matchPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_0"
        android:layout_marginBottom="@dimen/margin_0"
        android:textColor="@color/colorPlayerB"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:id="@+id/matchDate"
        android:layout_below="@id/matchPlayerEps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_0"
        android:textColor="@color/colorPlayerB"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:id="@+id/matchTurn"
        android:layout_below="@id/matchDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/button_margin"
        android:textColor="@color/colorPlayerB"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:id="@+id/matchAccounting"
        android:layout_below="@id/matchTurn"
        style="@style/c4aTV4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/rectangleyellow"
        android:text="@string/accounting" />

    <LinearLayout
        android:id="@+id/matchActions"
        android:layout_below="@id/matchAccounting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginBottom="@dimen/button_margin"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/currentMatchDelete"
            style="@style/c4aTV4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="@dimen/view_horizontal_margin_4"
            android:layout_weight="1"
            android:background="@drawable/rectangleyellow"
            android:text="@string/matchDelete" />
        <TextView
            android:id="@+id/matchPause"
            style="@style/c4aTV4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_horizontal_margin_4"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:background="@drawable/rectangleyellow"
            android:text="@string/matchPause" />
    </LinearLayout>

    <TextView
        android:id="@+id/matchUpdate"
        android:layout_below="@id/matchActions"
        style="@style/c4aTV4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/rectangleyellow"
        android:text="@string/checkGames" />

</RelativeLayout>